kubernetes/wordpress/03-wp-deployment.yaml
### Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-ALTERAR
  namespace: wp-ns
  labels:
    app: wp-CHANGEME
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wp-CHANGEME
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wp-CHANGEME
    spec:
      containers:
      - name: wp-ALTERAR
        image: wordpress:php8.0-apache
        ports:
        - containerPort: 80
          name: wp-http
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 200m
            memory: 512Mi
        volumeMounts:
          - name: wp-persistent-storage
            mountPath: /var/www/html
          - name: wp-cm-htaccess
            mountPath: /var/www/html/.htaccess
            subPath: .htaccess
      volumes:
        - name: wp-persistent-storage
          persistentVolumeClaim:
            claimName: wp-pvc-longhorn-claim
        - name: wp-cm-htaccess
          configMap:
            name: wp-cm-htaccess
